# AST1-CEIA-UBA-TP3

./: README.md  TP3.ipynb  pyproject.toml
data/: Pedidos - cod1.xlsx  Pedidos_real.xlsx  Pedidosporcod.xlsx
resultados/: 01_Forecast_SARIMA_fitventacodun_1.csv  02_Forecast_SARIMA_fitventacodun_aa.csv  03_Forecast_HW_fitventacodun.csv  04_Forecast_SARIMAX_fitventacodun.csv  05_Forecast_SARIMAX_EXOG_fitventacodun.csv
